Add examples on transactions and joins

--- a/jpa-streamer/0.1.0/stream-fundamentals/stream_basics.html
+++ b/jpa-streamer/0.1.0/stream-fundamentals/stream_basics.html
@@ -232,7 +232,7 @@
 <pre class="highlightjs highlight"><code>"Adam", "George", "Oscar", "Tim", "Zlatan"</code></pre>
 </div>
 </div>
-<div id="img-stream-pipeline" class="imageblock">
+<div id="img-stream-basics" class="imageblock">
 <div class="content">
 <img src="_images/stream_basics_1.png" alt="Stream Pipeline">
 </div>
