--- a/jpa-streamer/0.1.0/fetching-data/stream-examples.html
+++ b/jpa-streamer/0.1.0/fetching-data/stream-examples.html
@@ -157,6 +157,13 @@
   </ul>
 </nav>
 <h1 class="page">Stream Examples</h1>
+<div id="preamble">
+<div class="sectionbody">
+<div class="paragraph">
+<p>The examples in this section make use of the MySQL example database <a href="https://dev.mysql.com/doc/sakila/en/">Sakila</a>. It models a classic movie rental store and contains tables such as Film, Actor, Language etc.</p>
+</div>
+</div>
+</div>
 <div class="sect1">
 <h2 id="_paging"><a class="anchor" href="#_paging"></a>Paging</h2>
 <div class="sectionbody">
@@ -217,27 +224,262 @@ long is  true has 457 films</code></pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_one_to_many_relations"><a class="anchor" href="#_one_to_many_relations"></a>One-to-Many relations</h2>
+<h2 id="_one_to_many_many_to_one_many_to_many_relations"><a class="anchor" href="#_one_to_many_many_to_one_many_to_many_relations"></a>One-to-Many, Many-to-One, Many-to-Many relations</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>Relationships between tables are handled via the JPA provider. Hence, JPAstreamer assumes that the correct relationships are described by the present <code>@Entity</code> beans. The following examples makes use of the three tables <code>Film</code>, <code>Actor</code> and <code>Language</code> from the <a href="https://dev.mysql.com/doc/sakila/en/">Sakila database</a>. The corresponding entities are described below:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">@Entity
+@Table(name = "film", schema = "sakila")
+public class Film {
 
-</div>
-</div>
-<div class="sect1">
-<h2 id="_many_to_one_relations"><a class="anchor" href="#_many_to_one_relations"></a>Many-to-One relations</h2>
-<div class="sectionbody">
+    @Id
+    @Column(name = "film_id", columnDefinition = "smallint(5)")
+    private Integer filmId;
 
-</div>
-</div>
-<div class="sect1">
-<h2 id="_many_to_many_relations"><a class="anchor" href="#_many_to_many_relations"></a>Many-to-Many relations</h2>
-<div class="sectionbody">
+    @ManyToOne <i class="conum" data-value="1"></i><b>(1)</b>
+    @JoinColumn(name="language_id", nullable = false)
+    private Language language;
 
+    @ManyToMany(cascade = { CascadeType.ALL }) <i class="conum" data-value="2"></i><b>(2)</b>
+    @JoinTable(
+            name = "film_actor",
+            joinColumns = { @JoinColumn(name = "film_id") },
+            inverseJoinColumns = { @JoinColumn(name = "actor_id") }
+    )
+    List&lt;Actor&gt; actors = new ArrayList&lt;&gt;();
+
+    //...
+
+}</code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>A film can only be spoken in one language (simplified reality)</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="2"></i><b>2</b></td>
+<td>A film can starr many actors</td>
+</tr>
+</table>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">@Entity
+@Table(name = "language", schema = "sakila")
+public class Language {
+
+    @Id
+    @Column(name = "language_id", columnDefinition = "tinyint(5)")
+    private Integer languageId;
+
+    @OneToMany(mappedBy = "language") <i class="conum" data-value="1"></i><b>(1)</b>
+    private List&lt;Film&gt; films;
+
+    //...
+
+}</code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>One language can occur in many films</td>
+</tr>
+</table>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">@Entity
+@Table(name = "actor", schema = "sakila")
+public class Actor {
+
+    @Id
+    @Column(name = "actor_id", columnDefinition = "smallint(5)")
+    private Integer actorId;
+
+    @ManyToMany(mappedBy = "actors") <i class="conum" data-value="1"></i><b>(1)</b>
+    List&lt;Film&gt; films = new ArrayList&lt;&gt;();
+
+    //...
+}</code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>An actor can starr in many films</td>
+</tr>
+</table>
+</div>
+<div class="sect2">
+<h3 id="_one_to_many_relations"><a class="anchor" href="#_one_to_many_relations"></a>One-to-Many relations</h3>
+<div class="paragraph">
+<p>A One-to-Many relationship is defined as a relationship between two tables where a row from a first table can have multiple matching rows in a second table. For example, many films can be in the same language.</p>
+</div>
+<div class="paragraph">
+<p>The following example maps the languages to a list of all films that are spoken in that language:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">    Map&lt;Language, List&lt;Film&gt;&gt; languageFilmMap = jpaStreamer.stream(Language.class)
+        .collect(
+            toMap(Function.identity(),
+                Language::getFilms)
+        );</code></pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_many_to_one_relations"><a class="anchor" href="#_many_to_one_relations"></a>Many-to-One relations</h3>
+<div class="paragraph">
+<p>A Many-to-one relationship is defined as a relationship between two tables where many multiple rows from a first table can match the same single row in a second table. For example, a single language may be used in many films.</p>
+</div>
+<div class="paragraph">
+<p>The following example maps every film with rating PG-13 to its spoken language:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">Map&lt;Film, Language&gt; languageMap = jpaStreamer.stream(Film.class) <i class="conum" data-value="1"></i><b>(1)</b>
+    .filter(Film$.rating.equal("PG-13"))
+    .collect(
+            Collectors.toMap(Function.identity(), <i class="conum" data-value="2"></i><b>(2)</b>
+                Film::getLanguage <i class="conum" data-value="3"></i><b>(3)</b>
+            )
+    );</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>If printed with some formatting this may yield the following output:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-text hljs" data-lang="text">ALTER VICTORY: English
+APOLLO TEEN: English
+AIRPLANE SIERRA: English
+...</code></pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_many_to_many_relations"><a class="anchor" href="#_many_to_many_relations"></a>Many-to-Many relations</h3>
+<div class="paragraph">
+<p>A Many-to-Many relationship is defined as a relationship between two tables where many multiple rows from a first table can match multiple rows in a second table. Often a third table is used to form these relations. For example, an actor may participate in several films and a film usually have several actors.</p>
+</div>
+<div class="paragraph">
+<p>Given the entities above, we can create a filmography that maps every actor to a list of films that they have starred in:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">Map&lt;Actor, List&lt;Film&gt;&gt; filmography = jpaStreamer.stream(Actor.class) <i class="conum" data-value="1"></i><b>(1)</b>
+    .collect(
+            Collectors.toMap(Function.identity(), <i class="conum" data-value="2"></i><b>(2)</b>
+                Actor::getFilms <i class="conum" data-value="3"></i><b>(3)</b>
+            )
+    );</code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>Stream over the Actor-table</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="2"></i><b>2</b></td>
+<td>The identity function assigns the current Actor as the key</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="3"></i><b>3</b></td>
+<td>Enters the List of films as the value</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>If printed with some formatting this may yield the following output:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-text hljs" data-lang="text">JENNIFER DAVIS: [GREEDY ROOTS, HANOVER GALAXY, ... ]
+ED CHASE: [ARTIST COLDBLOODED, IMAGE PRINCESS, ... ]
+NICK WAHLBERG: [JEKYLL FROGMEN, CHISUM BEHAVIOR, ... ]
+...</code></pre>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_pivot_data"><a class="anchor" href="#_pivot_data"></a>Pivot Data</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>The following example shows a pivot table of all the actors and the number of films they have participated in for each film rating category (e.g. “PG-13”):</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">    Map&lt;Actor, Map&lt;String, Long&gt;&gt; pivot = jpaStreamer.stream(Actor.class) <i class="conum" data-value="1"></i><b>(1)</b>
+        .collect(
+            groupingBy(Function.identity(), <i class="conum" data-value="2"></i><b>(2)</b>
+                Collectors.flatMapping(a -&gt; a.getFilms().stream(), <i class="conum" data-value="3"></i><b>(3)</b>
+                    groupingBy(Film::getRating, counting()) <i class="conum" data-value="4"></i><b>(4)</b>
+                )
+            )
+        );</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>As this is a more advanced example it requires some thinking to understand.</p>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>Streams the Actor table</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="2"></i><b>2</b></td>
+<td>Assigns Actor as the key</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="3"></i><b>3</b></td>
+<td>Applies a downstream collector which flatmaps all the films which the actor starr in</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="4"></i><b>4</b></td>
+<td>The films are grouped according to rating, and the number of films of each rating is counted</td>
+</tr>
+</table>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+<code>Collectors.flatMapping()</code> is only present in Java 9 and forward.
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>This will produce the following (slightly simplified) output:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-text hljs" data-lang="text">MICHAEL BOLGER  {PG-13=9, R=3, NC-17=6, PG=4, G=8}
+LAURA BRODY  {PG-13=8, R=3, NC-17=6, PG=6, G=3}
+CAMERON ZELLWEGER  {PG-13=8, R=2, NC-17=3, PG=15, G=5}
+...</code></pre>
+</div>
+</div>
 </div>
 </div>
 <nav class="pagination">
