--- a/jpa-streamer/0.1.0/stream-fundamentals/stream_basics.html
+++ b/jpa-streamer/0.1.0/stream-fundamentals/stream_basics.html
@@ -13,7 +13,7 @@
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item" href="../../..">JPAStreamer</a>
+      <a class="navbar-item" href="../../.."></a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
         <span></span>
@@ -119,6 +119,13 @@
     <a class="nav-link" href="../fetching-data/stream-examples.html">Stream Examples</a>
   </li>
 </ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../transactions/transactions.html">Transactions</a>
   </li>
 </ul>
   </li>
