--- a/jpa-streamer/0.1.0/stream-fundamentals/intermediate_operations.html
+++ b/jpa-streamer/0.1.0/stream-fundamentals/intermediate_operations.html
@@ -120,12 +120,9 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <span class="nav-text">Stream Fundamentals</span>
+    <a class="nav-link" href="stream_basics.html">Stream Fundamentals</a>
     <button class="nav-item-toggle"></button>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="stream_basics.html">Stream Basics</a>
-  </li>
   <li class="nav-item is-current-page" data-depth="2">
     <a class="nav-link" href="intermediate_operations.html">Intermediate Operations</a>
   </li>
@@ -142,7 +139,7 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <span class="nav-text">Fetching Data</span>
+    <a class="nav-link" href="../fetching-data/fetching-data.html">Fetching Data</a>
     <button class="nav-item-toggle"></button>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
@@ -193,7 +190,7 @@
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="../introduction/introduction.html">JPAStreamer Docs</a></li>
-    <li>Stream Fundamentals</li>
+    <li><a href="stream_basics.html">Stream Fundamentals</a></li>
     <li><a href="intermediate_operations.html">Intermediate Operations</a></li>
   </ul>
 </nav>
@@ -795,7 +792,7 @@ Here is a table of some additional <strong>Intermediate Operations</strong> that
 </div>
 </div>
 <nav class="pagination">
-  <span class="prev"><a href="stream_basics.html">Stream Basics</a></span>
+  <span class="prev"><a href="stream_basics.html">Stream Fundamentals</a></span>
   <span class="next"><a href="terminal_operations.html">Terminal Operations</a></span>
 </nav>
 </article>
