--- a/jpa-streamer/0.1.0/fetching-data/stream-examples.html
+++ b/jpa-streamer/0.1.0/fetching-data/stream-examples.html
@@ -120,12 +120,9 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <span class="nav-text">Stream Fundamentals</span>
+    <a class="nav-link" href="../stream-fundamentals/stream_basics.html">Stream Fundamentals</a>
     <button class="nav-item-toggle"></button>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../stream-fundamentals/stream_basics.html">Stream Basics</a>
-  </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../stream-fundamentals/intermediate_operations.html">Intermediate Operations</a>
   </li>
@@ -142,7 +139,7 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <span class="nav-text">Fetching Data</span>
+    <a class="nav-link" href="fetching-data.html">Fetching Data</a>
     <button class="nav-item-toggle"></button>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
@@ -193,7 +190,7 @@
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="../introduction/introduction.html">JPAStreamer Docs</a></li>
-    <li>Fetching Data</li>
+    <li><a href="fetching-data.html">Fetching Data</a></li>
     <li><a href="stream-examples.html">Stream Examples</a></li>
   </ul>
 </nav>
