--- a/jpa-streamer/0.1.0/introduction/introduction.html
+++ b/jpa-streamer/0.1.0/introduction/introduction.html
@@ -119,12 +119,9 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <span class="nav-text">Stream Fundamentals</span>
+    <a class="nav-link" href="../stream-fundamentals/stream_basics.html">Stream Fundamentals</a>
     <button class="nav-item-toggle"></button>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../stream-fundamentals/stream_basics.html">Stream Basics</a>
-  </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../stream-fundamentals/intermediate_operations.html">Intermediate Operations</a>
   </li>
@@ -141,7 +138,7 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <span class="nav-text">Fetching Data</span>
+    <a class="nav-link" href="../fetching-data/fetching-data.html">Fetching Data</a>
     <button class="nav-item-toggle"></button>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
@@ -279,7 +276,7 @@ More examples are available in the chapter <a href="../fetching-data/stream-exam
 </div>
 </div>
 <div class="sect1">
-<h2 id="_how_jpa_streamer_fits_into_your_application"><a class="anchor" href="#_how_jpa_streamer_fits_into_your_application"></a>How JPA streamer fits into your application</h2>
+<h2 id="_how_jpastreamer_fits_into_your_application"><a class="anchor" href="#_how_jpastreamer_fits_into_your_application"></a>How JPAstreamer fits into your application</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>JPAstreamer is a library that is added to enrich the API of the underlying JPA provider. It does not impact the existing application code and there is no need to replace any software components. Below is an overview of a typical database application leveraging JPAstreamer.</p>
@@ -288,7 +285,6 @@ More examples are available in the chapter <a href="../fetching-data/stream-exam
 <div class="content">
 <img src="_images/jpa-streamer-architecture.png" alt="JPAstreamer Architecture" width="300">
 </div>
-<div class="title">JPAstreamer enriches the API of any JPA provider to include new means of expressing queries.</div>
 </div>
 <div class="paragraph">
 <p><strong>Application Code</strong></p>
