--- a/jpa-streamer/0.1.0/why-jpastreamer/why-jpastreamer.html
+++ b/jpa-streamer/0.1.0/why-jpastreamer/why-jpastreamer.html
@@ -120,12 +120,9 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <span class="nav-text">Stream Fundamentals</span>
+    <a class="nav-link" href="../stream-fundamentals/stream_basics.html">Stream Fundamentals</a>
     <button class="nav-item-toggle"></button>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../stream-fundamentals/stream_basics.html">Stream Basics</a>
-  </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../stream-fundamentals/intermediate_operations.html">Intermediate Operations</a>
   </li>
@@ -142,7 +139,7 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <span class="nav-text">Fetching Data</span>
+    <a class="nav-link" href="../fetching-data/fetching-data.html">Fetching Data</a>
     <button class="nav-item-toggle"></button>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
@@ -204,19 +201,21 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="_get_rid_of_repetitive_and_complex_coding"><a class="anchor" href="#_get_rid_of_repetitive_and_complex_coding"></a>Get rid of repetitive and complex coding</h3>
+<h3 id="_avoid_repetitive_and_complex_coding"><a class="anchor" href="#_avoid_repetitive_and_complex_coding"></a>Avoid repetitive and complex coding</h3>
 <div class="paragraph">
-<p>Java Stream is a declarative interface that has won ground for its intuitive way of declaring your intent, <em>what</em> you want, rather than <em>how</em> to obtain that result. Most of the Stream operators happens to map naturally to SQL constructs (see <a href="../fetching-data/sql-equivalents.html" class="page">SQL equivalents</a>), which is why you can easily reap the benefits of the Java Stream interface when querying. As a result, your queries can be more terse while remaining expressive and intuitive to read.</p>
+<p>Java Stream is a declarative interface that has gained popularity for its intuitive way of declaring your intent, <em>what</em> you want, rather than <em>how</em> to obtain that result. Most of the Stream operators happens to map naturally to SQL constructs (see <a href="../fetching-data/sql-equivalents.html" class="page">SQL equivalents</a>), which is why you can easily reap the benefits of the Java Stream interface when querying. As a result, your queries can be more terse while remaining expressive and intuitive to read.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_leverage_the_java_stream_ecosystem"><a class="anchor" href="#_leverage_the_java_stream_ecosystem"></a>Leverage the Java stream ecosystem</h3>
 <div class="paragraph">
-<p>Beyond its powerful
-The Stream interface is compatible with a large variety of Collectors that can be applied to reduce the results of the Stream into almost any Collection e.g. a <code>Map</code>, <code>List</code> or <code>Set</code>.</p>
+<p>There is an ecosystem of libraries compatible with Streams which provide further assistance when handling data. As an example, the result of your query can easily be reduced to a wide variety of Java Collections i.e. a <code>Map</code>, <code>List</code> or a <code>Set</code>. You also have the option of parallelizing the workload of the Stream with a one-line command.</p>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_no_disturbance_of_the_existing_codebase"><a class="anchor" href="#_no_disturbance_of_the_existing_codebase"></a>No disturbance of the existing codebase</h3>
 <div class="paragraph">
-<p>A Stream can easily be reduced to a wide variety of collections and</p>
+<p>JPAstreamer is designed to extend the API of the underlying JPA provider. This means that there is no need to replace existing software components, and your current codebase remains unaffected. Although, going forward, you can use the Stream query interface whenever it suits your needs.</p>
 </div>
 </div>
 <nav class="pagination">
